First version update!

--- a/LimboAuth-Plugin/src/main/resources/messages.yml
+++ b/LimboAuth-Plugin/src/main/resources/messages.yml
@@ -2,4 +2,10 @@ player-successful-login: "&aSuccessfully Logged In"
 player-incorrect-password: "&cIncorrect password!"
 player-register-message: "&aRegister with /register (password) (password)"
 player-login-message: "&aLogin with /login (password)"
-player-login-to-move: "&cPlease login or register to move!"
+player-successful-register: "Registration Complete\nNow Please Login!: /login (password)"
+player-register-passwords-do-not-match: "Passwords do not match!"
+
+player-title-login-to-move: "Please Login To Move!"
+player-subtitle-login-to-move: "/login (password)"
+player-title-register-to-move: "Please Register To Move!"
+player-subtitle-register-to-move: "/register (password) (password)"
